--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
   <artifactId>otec</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <packaging>pom</packaging>
+
   <scm>
     <connection>scm:git:git://git.cedarsoft.com/com.cedarsoft.otec</connection>
     <developerConnection>scm:git:ssh://git.cedarsoft.com/home/git/com.cedarsoft.otec</developerConnection>
