--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -13,6 +14,10 @@
   <version>1.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
+
+  <modules>
+    <module>model</module>
+  </modules>
 
   <scm>
     <connection>scm:git:git://git.cedarsoft.com/com.cedarsoft.otec</connection>
@@ -52,5 +57,4 @@
       <post>info@cedarsoft.com</post>
     </mailingList>
   </mailingLists>
-
 </project>
