--- a/model/pom.xml
+++ b/model/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>otec</artifactId>
     <groupId>com.cedarsoft</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2010-01-SNAPSHOT</version>
   </parent>
 
   <groupId>com.cedarsoft.otec</groupId>
