--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.cedarsoft</groupId>
   <artifactId>otec</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2010-01-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
